--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "parcel  FoodOrdering.html",
     "build": "parcel build FoodOrdering.html",
-    "test": "jest"
+    "test": "jest",
+    "server": "nodemon proxyserver.js",
+    "dev":"concurrently \"npm run server\" \"npm run start\""
   },
   "keywords": [
     "React",
@@ -22,12 +24,20 @@
     "tailwindcss": "^3.4.6"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.7",
+    "concurrently": "^9.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
+    "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0"
   },
   "browserslist": [
     "last 2 versions"
